# angulus

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: release.yml
.github/workflows/: check-and-lint.yml  ci.yml  prepare-release.yml
src/: angle.rs  float.rs  helpers.rs  lib.rs  macros.rs  main_angle.rs  num.rs  private.rs  rand.rs  serde.rs  to_angle.rs  unbounded.rs  unit.rs  units.rs  utility.rs
src/unit/: degrees.rs  radians.rs  turns.rs
