[package]
name = "angulus"
version = "0.4.1"
edition = "2021"
rust-version = "1.61"
authors = ["Tristan Guichaoua"]
description = "Unit agnostic angle"
keywords = ["utility", "angle", "math", "wrapper"]
categories = ["data-structures", "mathematics", "value-formatting"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tguichaoua/angulus"

exclude = [".github/"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []

[dependencies]
libm = { version = "0.2", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
float_eq = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
