[package]
name = "angulus"
version = "0.5.0"
edition = "2021"
authors = ["Tristan Guichaoua <tguichaoua.dev@gmail.com>"]
description = "Unit agnostic angle"

rust-version = "1.61"
repository = "https://github.com/tguichaoua/angulus"
license = "MIT OR Apache-2.0"
keywords = ["utility", "angle", "math", "wrapper"]
categories = ["data-structures", "mathematics", "value-formatting"]

exclude = [".github/"]

# ---------------------------------------------------------------------------- #

[features]
default = ["std"]
std = []

# ---------------------------------------------------------------------------- #

[dependencies]
libm = { version = "0.2", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
float_eq = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ---------------------------------------------------------------------------- #

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ---------------------------------------------------------------------------- #
